show search results from stackoverflow API
- added Stack Overflow API service

--- a/app/index.html
+++ b/app/index.html
@@ -59,5 +59,6 @@
 <script src="app.js"></script>
 <script src="cSearchResults/searchResults.js"></script>
 <script src="cQuestionInfo/questionInfo.js"></script>
+<script src="services.js"></script>
 </body>
 </html>
