--- a/app/cSearchResults/searchResults.html
+++ b/app/cSearchResults/searchResults.html
@@ -1,1 +1,18 @@
-<h2>{{searchText}}</h2>
+<table class="table table-striped table-hover">
+    <thead>
+    <tr>
+        <th>Author</th>
+        <th>Title</th>
+        <th>Responses</th>
+        <th>Tags</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="question in questions">
+        <td>{{question.owner.display_name}}</td>
+        <td>{{question.title}}</td>
+        <td>{{question.answer_count}}</td>
+        <td><span ng-repeat="tag in question.tags">{{tag}}</span></td>
+    </tr>
+    </tbody>
+</table>
