show question info

--- a/app/cQuestionInfo/questionInfo.html
+++ b/app/cQuestionInfo/questionInfo.html
@@ -1,4 +1,2 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-</p>
+<h2><b>Q: </b>{{question.title}}</h2>
+<div ng-bind-html="body"></div>
