--- a/app/cSearchResults/searchResults.html
+++ b/app/cSearchResults/searchResults.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-hover">
+<table id="search-results" class="table table-striped table-hover">
     <thead>
     <tr>
         <th>Author</th>
@@ -9,10 +9,10 @@
     </thead>
     <tbody>
     <tr ng-repeat="question in questions">
-        <td>{{question.owner.display_name}}</td>
-        <td><a href="#/question/{{question.question_id}}">{{question.title}}</a></td>
-        <td><a href="#/question/{{question.question_id}}">{{question.answer_count}}</a></td>
-        <td><span ng-repeat="tag in question.tags">{{tag}}</span></td>
+        <td><b>{{question.author}}</b></td>
+        <td><a class='question-title' href="#/question/{{question.id}}" ng-bind-html="question.title"></a></td>
+        <td><a href="#/question/{{question.id}}"><span class="badge">{{question.answer_count}}</span></a></td>
+        <td><span class="label label-default" ng-repeat="tag in question.tags">{{tag}}</span></td>
     </tr>
     </tbody>
 </table>
