--- a/app/cSearchResults/moreInfo.html
+++ b/app/cSearchResults/moreInfo.html
@@ -1,5 +1,9 @@
-<div class="row">
-    <div id="search-results" ng-class="{'col-md-12':!rightPanelOpen, 'col-md-7':rightPanelOpen}">
+<div id="more-search" class="sidebar">
+    <div class="btn-show-hide opened" ng-click="opened = !opened">
+        <i class="glyphicon glyphicon-chevron-right right"></i>
+        <i class="glyphicon glyphicon-chevron-left left"></i>
+    </div>
+    <div class="more-results">
         <table class="table table-striped table-hover">
             <thead>
             <tr>
@@ -19,5 +23,4 @@
             </tbody>
         </table>
     </div>
-    <more-info questions="moreInfo" opened="rightPanelOpen"></more-info>
 </div>
