--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="bower_components/bootswatch/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="app.css">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 <!--[if lt IE 7]>
@@ -34,7 +35,9 @@
                 <div class="form-group">
                     <input type="text" class="form-control" ng-model="searchText" placeholder="Search">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" title="Search" class="btn btn-default">
+                    <i class="glyphicon glyphicon-search"></i>
+                </button>
             </form>
         </div>
     </div>
