--- a/app/cSearchResults/panelInfo.html
+++ b/app/cSearchResults/panelInfo.html
@@ -1,16 +1,22 @@
 <div id="more-search" class="sidebar">
-    <div class="btn-show-hide opened" ng-click="opened = !opened">
+    <div class="btn-show-hide" ng-click="opened = !opened">
         <i class="glyphicon glyphicon-chevron-right right"></i>
         <i class="glyphicon glyphicon-chevron-left left"></i>
     </div>
-    <div class="more-results">
+    <div class="more-results" ng-hide="!opened">
+        <h3 ng-if="info.type == 'tag'">
+            Frequent questions by tag <span class="label label-default">{{info.tag}}</span>
+        </h3>
+        <h3 ng-if="info.type == 'tag'">
+            Frequent questions by tag <span class="label label-default">{{info.tag}}</span>
+        </h3>
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>Author</th>
-                <th>Title</th>
-                <th>Responses</th>
-                <th>Tags</th>
+                <th width="20%">Author</th>
+                <th width="40%">Title</th>
+                <th width="10%">Resp</th>
+                <th width="30%">Tags</th>
             </tr>
             </thead>
             <tbody>
