added search author's questions

--- a/app/cSearchResults/panelInfo.html
+++ b/app/cSearchResults/panelInfo.html
@@ -7,8 +7,8 @@
         <h3 ng-if="info.type == 'tag'">
             Frequent questions by tag <span class="label label-default">{{info.tag}}</span>
         </h3>
-        <h3 ng-if="info.type == 'tag'">
-            Frequent questions by tag <span class="label label-default">{{info.tag}}</span>
+        <h3 ng-if="info.type == 'author'">
+            <b>{{info.author}}</b>'s questions
         </h3>
         <table class="table table-striped table-hover">
             <thead>
