--- a/app/cSearchResults/panelInfo.html
+++ b/app/cSearchResults/panelInfo.html
@@ -8,7 +8,7 @@
             Frequent questions by tag <span class="label label-default">{{info.tag}}</span>
         </h3>
         <h3 ng-if="info.type == 'author'">
-            <b>{{info.author}}</b>'s questions
+            <b ng-bind-html="info.author"></b>'s questions
         </h3>
         <table class="table table-striped table-hover">
             <thead>
@@ -21,7 +21,7 @@
             </thead>
             <tbody>
             <tr ng-repeat="question in questions">
-                <td><b class="author-name">{{question.author}}</b></td>
+                <td><b class="author-name" ng-bind-html="question.author"></b></td>
                 <td><a class='question-title' href="#/question/{{question.id}}" ng-bind-html="question.title"></a></td>
                 <td><a href="#/question/{{question.id}}"><span class="badge">{{question.answer_count}}</span></a></td>
                 <td><span class="label label-default" ng-repeat="tag in question.tags">{{tag}}</span></td>
