--- a/app/cSearchResults/searchResults.html
+++ b/app/cSearchResults/searchResults.html
@@ -3,17 +3,17 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>Author</th>
-                <th>Title</th>
-                <th>Responses</th>
-                <th>Tags</th>
+                <th width="20%">Author</th>
+                <th width="40%">Title</th>
+                <th width="10%">Responses</th>
+                <th width="30%">Tags</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="question in questions">
                 <td>
-                    <b class="author-name" ng-click="onAuthorClick(question.author_id, question.author)">
-                        {{question.author}}
+                    <b class="author-name" ng-bind-html="question.author"
+                       ng-click="onAuthorClick(question.author_id, question.author)">
                     </b>
                 </td>
                 <td><a class='question-title' href="#/question/{{question.id}}" ng-bind-html="question.title"></a></td>
